new logo, more achievements, persistent game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.binroot.stocks">
 
-    <application android:icon="@drawable/ic_stocks">
+    <application android:icon="@drawable/ic_new">
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data android:name="com.google.android.gms.games.APP_ID"
